# qnanopainter

./: CMakeLists.txt
libqnanopainter/: CMakeLists.txt  qnanoquickitem.cpp
